; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/freescale/imx/extr_tzic.c_tzic_disable_intr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/freescale/imx/extr_tzic.c_tzic_disable_intr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intr_irqsrc = type { i32 }
%struct.tzic_softc = type { i32 }
%struct.tzic_irqsrc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.intr_irqsrc*)* @tzic_disable_intr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tzic_disable_intr(i32 %0, %struct.intr_irqsrc* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.intr_irqsrc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.tzic_softc*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.intr_irqsrc* %1, %struct.intr_irqsrc** %4, align 8
  %7 = load %struct.intr_irqsrc*, %struct.intr_irqsrc** %4, align 8
  %8 = bitcast %struct.intr_irqsrc* %7 to %struct.tzic_irqsrc*
  %9 = getelementptr inbounds %struct.tzic_irqsrc, %struct.tzic_irqsrc* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %3, align 4
  %12 = call %struct.tzic_softc* @device_get_softc(i32 %11)
  store %struct.tzic_softc* %12, %struct.tzic_softc** %6, align 8
  %13 = load %struct.tzic_softc*, %struct.tzic_softc** %6, align 8
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @tzic_irq_mask(%struct.tzic_softc* %13, i32 %14)
  ret void
}

declare dso_local %struct.tzic_softc* @device_get_softc(i32) #1

declare dso_local i32 @tzic_irq_mask(%struct.tzic_softc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
